...
    Plus,
    Popcorn,
    Radio,
    Receipt,
    Repeat,
    Scissors,
    Settings,
    ShieldCheck,
    Ship,
    Shirt,
    ShoppingBag,
    ShoppingBasket,
    ShoppingCart,
...
