...
    );

    return (
        <SearchableListBottomSheet
            ref={ref}
            onSearchChange={setSearch}
            searchPlaceholder={t`Search currencies...`}
            search={search}
            keyExtractor={keyExtractor}
            renderItem={renderItem}
            emptyDescription={t`Try a different search term`}
            emptyTitle={t`No currencies found`}
            data={filteredCurrencies}
...
