...

    if (!isDefined(stickyInstrument)) {
        return <EmptyScreen />;
    }

    return (
        <CreateAccountScreen variant={variant} title={t`Debt Account`} onSubmit={handleSubmit} isSubmitting={isSubmitting}>
            <CreateAccountCoreFields
                variant={variant}
                control={control}
                instrumentSymbol={stickyInstrument.symbol}
                balanceFieldLabel={balanceFieldLabel}
            >
...
