...
            </HapticPressable>

            <CircleIcon icon={ICONS[icon]} variant="default" size="2xl" className="rounded-3xl" />

            <View className="gap-y-xs">
                <Text className="text-primary font-semibold text-3xl">
                    <Trans>Account Settings</Trans>
                </Text>

                <Text className={accountTypeVariants({ variant: ACCOUNT_COLOR[accountType] })}>{i18n.t(ACCOUNT_TYPE[accountType])}</Text>
            </View>
        </View>
    );
...
