...

    return (
        <SearchableListBottomSheet
            ref={ref}
            emptyIcon={emptyIcon}
            onSearchChange={setSearch}
            searchPlaceholder={t`Search contacts...`}
            search={search}
            keyExtractor={keyExtractor}
            renderItem={renderItem}
            emptyDescription={emptyDescription}
            emptyTitle={emptyTitle}
            data={filteredContacts}
...
