appId: ${APP_ID}
---

- tapOn:
    id: 'AccountForm.NameInput'
- eraseText: 60
- inputText: ${UPDATED_ACCOUNT_NAME}
- waitForAnimationToEnd
- assertVisible: ${UPDATED_ACCOUNT_NAME}

- tapOn: 'Account Settings'
- hideKeyboard
- tapOn:
    id: 'AccountForm.SubmitButton'

- extendedWaitUntil:
    visible:
      id: 'HomePage.TotalBalance'
    timeout: 10000
