appId: ${APP_ID}
---

- scrollUntilVisible:
    element:
      id: 'AccountForm.NameInput'
    direction: UP
- tapOn:
    id: 'AccountForm.NameInput'
- eraseText: 30
- inputText: ${UPDATED_ACCOUNT_NAME}
- tapOn:
    text: 'ACCOUNT NAME & ICON'
- scrollUntilVisible:
    element:
      id: 'AccountForm.SubmitButton'
    direction: DOWN
- extendedWaitUntil:
    visible:
      id: 'AccountForm.SubmitButton'
    timeout: 3000
- tapOn:
    id: 'AccountForm.SubmitButton'

- extendedWaitUntil:
    visible:
      id: 'AccountCard.${UPDATED_ACCOUNT_NAME}'
    timeout: 10000
